Closes #42 fix z-index issue

--- a/_sass/_minima.scss
+++ b/_sass/_minima.scss
@@ -49,6 +49,10 @@ $on-large:         $on-laptop !default;
   font-size: $base-font-size * $ratio;
 }
 
+.site-nav {
+  z-index: 10;
+}
+
 // Import partials.
 @import
   "minima/base",
